# app/Http/Requests/StoreServiceRequest.php
@@ -14,14 +14,14 @@ class StoreServiceRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'title'       => ['required', 'string', 'max:255'],
-            'slug'        => ['nullable', 'string', 'max:255', 'unique:services,slug'],
-            'description' => ['nullable', 'string'],
-            'price'       => ['required', 'numeric', 'min:0'],
-            'duration'    => ['nullable', 'integer', 'min:1'],
-            'image'       => ['required', 'image', 'mimes:jpeg,png,jpg,gif,svg,webp', 'max:2048'],
-            'status'      => ['required', 'in:0,1'],
-            'orderby'     => ['nullable', 'integer'],
+            'service_category_id' => ['required', 'exists:service_categories,id'],
+            'title'               => ['required', 'string', 'max:255'],
+            'description'         => ['nullable', 'string'],
+            'price'               => ['required', 'numeric', 'min:0'],
+            'duration'            => ['nullable', 'integer', 'min:1'],
+            'image'               => ['required', 'image', 'mimes:jpeg,png,jpg,gif,svg,webp', 'max:2048'],
+            'status'              => ['required', 'in:0,1'],
+            'orderby'             => ['nullable', 'integer'],
         ];
     }
 }
