# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\AuthController;
 use App\Http\Controllers\Api\V1\BannerController;
+use App\Http\Controllers\Api\V1\ServiceCategoryController;
 use App\Http\Controllers\Api\V1\ServiceController;
 use App\Http\Controllers\Api\V1\AboutController;
 use App\Http\Controllers\Api\V1\GalleryController;
@@ -36,6 +37,10 @@ Route::prefix('v1')->group(function () {
     });
     Route::get('banners', [BannerController::class, 'index']);
     Route::get('banners/{banner}', [BannerController::class, 'show']);
+    Route::get('service-categories', [ServiceCategoryController::class, 'index']);
+    Route::get('service-categories/{service_category}', [ServiceCategoryController::class, 'show']);
+    Route::get('services', [ServiceController::class, 'index']);
+    Route::get('services/{service}', [ServiceController::class, 'show']);
     Route::get('galleries', [GalleryController::class, 'index']);
     Route::get('galleries/{gallery}', [GalleryController::class, 'show']);
 });
@@ -47,7 +52,8 @@ Route::middleware('auth:sanctum')->group(function () {
 
     Route::prefix('v1')->group(function () {
         Route::apiResource('banners', BannerController::class)->except(['index', 'show']);
-        Route::apiResource('services', ServiceController::class);
+        Route::apiResource('service-categories', ServiceCategoryController::class)->except(['index', 'show']);
+        Route::apiResource('services', ServiceController::class)->except(['index', 'show']);
         Route::apiResource('abouts', AboutController::class);
         Route::apiResource('galleries', GalleryController::class)->except(['index', 'show']);
     });
